# postgres

./: GNUmakefile.in  meson_options.txt
.github/workflows/: json-event-stream.yml
contrib/: Makefile  meson.build
contrib/json_event_stream/: FORK_HANDOFF.md  Makefile  RELEASE.md  STRIPPED_PROFILE.md  TODO.md  json_event_bench  json_event_ci  json_event_ctl.c  json_event_httpd.c  json_event_mqttd.c  json_event_package  json_event_remote_guard  json_event_smoke  json_event_stream--1.0--1.1.sql  json_event_stream--1.0.sql  json_event_stream--1.1.sql  json_event_stream.control  meson.build
contrib/json_event_stream/expected/: json_event_stream.out  json_event_stream_upgrade.out
contrib/json_event_stream/sql/: json_event_stream.sql  json_event_stream_upgrade.sql
